# Rust-PubSub-Server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PERFORMANCE.md  README.md  activity-map.html  circular-graph.html  control-panel.html  docker-compose.yml  login.html
migrations/: 001_add_message_id_and_producer.sql  002_optimize_performance.sql  003_add_subscriptions_table.sql
src/: app_state.rs  broker.rs  cache.rs  database.rs  embedded.rs  handlers.rs  main.rs  models.rs  socketio.rs  websocket.rs
static/: activity-map.css  activity-map.js  circular-graph.css  circular-graph.js  common-graph.js  control-panel.js  dashboard-guard.js  nav.js  style.css
tests/: README.md  demo_socketio.py  latency_analysis.py  perf_test.py  perf_test.sh  stress_test.py  test_consumer_delivery.sh  test_live_arrows.py  test_socketio_client.py  test_specific_topic.py  test_ui_fixes.py  test_wildcard.py
