[package]
name = "pubsub_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
futures-util = "0.3"
rust-embed = { version = "8.5", features = ["include-exclude"] }
mime_guess = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.release.package."*"]
opt-level = 3